# articlesdb

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml  scraper.py
app/: main.py
app/articles/: news.py
app/core/: config.py  db.py  db_sync.py
app/core/parsers/: habr.py
app/front/templates/: news.html
core/models/: base.py  news.py
core/parsers/: habr.py
news/parsers/: habr.py  utils.py
