[tool.poetry]
name = "articlesdb"
version = "0.1.0"
description = ""
authors = ["KPR <130840048+iampavelk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
