[tool.poetry]
name = "articlesdb"
version = "0.1.0"
description = ""
authors = ["KPR <130840048+iampavelk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
